--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -162,6 +162,7 @@ button {
 }
 
 .register-cancel-modal {
+    width: 450px;
     margin: 0 20px;
     display: flex;
     flex-direction: column;
@@ -577,7 +578,8 @@ a.link-termos-politica {
         display: flex;
         flex-direction: row;
         gap: 0;
-        height: 620px;
+        min-height: 480px;
+        height: auto;
     }
 
     .container {
@@ -587,7 +589,7 @@ a.link-termos-politica {
 
     .banner {
         width: 300px;
-        height: 100%;
+        height: auto;
     
         &__desktop {
             display: block;
