feature: new layout register v3

--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -1,5 +1,5 @@
 
-<div class="contents-register">
+<div class="contents-register" [ngClass]="{'registerCancelActive' : registerCancel}">
     <div class="banner">
         <div
             class="banner__mobile"
