--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -504,6 +504,10 @@ a.link-termos-politica {
     height: 100svh;
 }
 
+.registerCancelActive{
+    flex-direction: row;
+}
+
 .banner{
     outline: none;
     min-height: 175px;
