--- a/src/app/shared/layout/modals/login-modal/login-modal.component.css
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.css
@@ -30,6 +30,7 @@
     justify-content: space-between;
     height: 100%;
     align-items: center;
+    background-color: var(--background);
 }
 
 .header-login {
