feature: new layout register v3

--- a/src/app/shared/layout/modals/onboarding-modal/onboarding-modal.component.html
+++ b/src/app/shared/layout/modals/onboarding-modal/onboarding-modal.component.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="modal-footer-onboarding">
-        <span>Já possui uma conta?</span><a href="#" onclick="register()" class="btn-footer">Faça o login</a>
+        <span>Já possui uma conta?</span><a onclick="register()" class="btn-footer">Faça o login</a>
     </div>
 </div>
 
