feat: verify account verificatition in wellcoome

--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -19,7 +19,7 @@
                 <div class="modal-footer-onboarding">
                     <div class="div-option-register-or-login">
                         <span>{{'geral.jaPossuiUmaConta' | translate}}</span>
-                        <a href="#" (click)="openLogin()" class="btn-footer">{{'geral.logIn' | translate}}</a>
+                        <a type="button" (click)="openLogin()" class="btn-footer">{{'geral.logIn' | translate}}</a>
                     </div>
                     <div class="header-register-item">
                         <a type="button" class="btn-close-register" (click)="onClose()">
