--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -242,7 +242,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <label *ngIf="!isLoterj" [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
+                        <label [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
                             {{'geral.deAcordoComOsTermos1' | translate}}
                             <a
                                 id="linkTermos"
@@ -262,31 +262,6 @@
                             >
                                 {{'footer.politicaDePrivacidade' | translate | lowercase}}
                             </a>.
-                        </label>
-                        <label *ngIf="isLoterj" [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
-                            <input type="checkbox" id="termosUso" formControlName="termosUso">
-                            <div>
-                                {{'geral.certificoQueTenhoMais' | translate}}
-                                <a
-                                    id="linkTermos"
-                                    target="_blank"
-                                    [routerLink]="['/informacoes/termos-condicoes']"
-                                    class="link-termos-politica"
-                                >
-                                    {{'geral.termosDeUso' | translate | lowercase}}
-                                </a>
-
-                                {{'geral.deAcordoComOsTermos2' | translate}}
-                                <a
-                                    id="linkPolitica"
-                                    target="_blank"
-                                    [routerLink]="['/informacoes/politica-privacidade']"
-                                    class="link-termos-politica"
-                                >
-                                    {{'footer.politicaDePrivacidade' | translate | lowercase}}
-                                </a>.
-                            </div>
-                            <app-error-msg [control]="form.get('termosUso')" class="text-left"></app-error-msg>
                         </label>
                     </div>
                 </div>
