--- a/src/app/clientes/personal-data/document/document.component.html
+++ b/src/app/clientes/personal-data/document/document.component.html
@@ -23,8 +23,7 @@
     </div>
     <ng-container *ngIf="verificationRequired">
         <div *ngIf="faceMatchType == 'legitimuz' && faceMatchEnabled">
-            <div #legitimuz id="legitimuz-container"
-                *ngIf="!faceMatchChangePasswordValidated && !verifiedIdentity">
+            <div #legitimuz id="legitimuz-container">
                 <div id="legitimuz">
                     <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out"
                         [value]="dataUserCPF" />
@@ -37,7 +36,7 @@
             </div>
         </div>
         <div *ngIf="faceMatchType == 'docCheck' && faceMatchEnabled">
-            <div #docCheck id="docCheck" *ngIf="!faceMatchChangePasswordValidated && !verifiedIdentity">
+            <div #docCheck id="docCheck">
                 <button id="exDocCheckAction"
                     [attr.data-ex-doccheck-document]="dataUserCPF"
                     [attr.data-ex-doccheck-document-hmac-hash]="secretHash" class="btn btn-custom"
